# pljit

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  readme.md
pljit/pljit_core/: CMakeLists.txt  FunctionHandle.cpp  FunctionHandle.hpp  FunctionStorage.cpp  FunctionStorage.hpp  PLjit.cpp  PLjit.hpp
pljit/pljit_core/ast/: Ast.cpp  Ast.hpp  AstPrintVisitor.cpp  AstPrintVisitor.hpp  AstVisitor.cpp  AstVisitor.hpp  CMakeLists.txt  ExecutionTable.cpp  ExecutionTable.hpp  SymbolTable.cpp  SymbolTable.hpp
pljit/pljit_core/ast/ast_core/: ExecutionTable.cpp  ExecutionTable.hpp  SymbolTable.cpp  SymbolTable.hpp
pljit/pljit_core/ast/ast_nodes/: AdditiveExpression.cpp  AdditiveExpression.hpp  ArithmeticExpression.cpp  ArithmeticExpression.hpp  AssignmentStatement.cpp  AssignmentStatement.hpp  Expression.cpp  Expression.hpp  Function.cpp  Function.hpp  MultiplicativeExpression.cpp  MultiplicativeExpression.hpp  PrimaryExpression.cpp  PrimaryExpression.hpp  ReturnStatement.cpp  ReturnStatement.hpp  Statement.cpp  Statement.hpp  TerminalExpression.cpp  TerminalExpression.hpp  VariableExpression.cpp  VariableExpression.hpp  utility.cpp  utility.hpp
pljit/pljit_core/ast/optimization/: AstOptimizationVisitor.cpp  AstOptimizationVisitor.hpp  ConstantPropagationOptimizationPass.cpp  ConstantPropagationOptimizationPass.hpp  ConstantPropagationVisitor.cpp  ConstantPropagationVisitor.hpp  DeadCodeEliminationOptimizationPass.cpp  DeadCodeEliminationOptimizationPass.hpp  DeadCodeEliminationVisitor.cpp  DeadCodeEliminationVisitor.hpp  OptimizationPass.cpp  OptimizationPass.hpp
pljit/pljit_core/ast/print/: AstPrintVisitor.cpp  AstPrintVisitor.hpp
pljit/pljit_core/error_management/: CMakeLists.txt  CompilationError.cpp  CompilationError.hpp  Error.cpp  Error.hpp  PLjit_Error.cpp  RuntimeError.cpp  RuntimeError.hpp
pljit/pljit_core/execution/: FunctionHandle.cpp  FunctionStorage.cpp  FunctionStorage.hpp  PLjit.cpp  PLjit_FunctionHandle.cpp
pljit/pljit_core/include/: FunctionHandle.hpp  PLjit.hpp  PLjit_Error.hpp  PLjit_FunctionHandle.hpp
pljit/pljit_core/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp
pljit/pljit_core/lexer/tokens/: CMakeLists.txt  LexerArithmeticToken.hpp  LexerAssignmentToken.hpp  LexerBracketToken.hpp  LexerDeclaratorToken.hpp  LexerErrorToken.hpp  LexerIdentifierToken.hpp  LexerKeywordToken.hpp  LexerLiteralToken.hpp  LexerSeparatorToken.hpp  LexerTerminatorToken.hpp  LexerToken.cpp  LexerToken.hpp
pljit/pljit_core/parse_tree/: CMakeLists.txt  ExpressionVisitor.cpp  ExpressionVisitor.hpp  ParseTree.cpp  ParseTree.hpp  ParseTreeParsingError.hpp  ParseTreeParsingResult.hpp  ParseTreeParsingSuccess.hpp  ParseTreePrintVisitor.cpp  ParseTreePrintVisitor.hpp  ParseTreeVisitor.hpp
pljit/pljit_core/parse_tree/parse_tree_nodes/: AdditiveExpression.cpp  AdditiveExpression.hpp  ArithmeticSymbol.hpp  AssignmentExpression.cpp  AssignmentExpression.hpp  CompoundStatement.cpp  CompoundStatement.hpp  ConstantDeclaration.cpp  ConstantDeclaration.hpp  DeclaratorList.cpp  DeclaratorList.hpp  Factory.cpp  Factory.hpp  FunctionDefinition.cpp  FunctionDefinition.hpp  Identifier.cpp  Identifier.hpp  InitDeclarator.cpp  InitDeclarator.hpp  InitDeclaratorList.cpp  InitDeclaratorList.hpp  Keyword.hpp  Literal.cpp  Literal.hpp  MultiplicativeExpression.cpp  MultiplicativeExpression.hpp  ParameterDeclaration.cpp  ParameterDeclaration.hpp  ParseTreeStatement.cpp  ParseTreeStatement.hpp  (+12 more)
pljit/pljit_core/pljit_core_utility/: CMakeLists.txt  CompilationError.cpp  CompilationError.hpp  Expected.hpp  NonCopyable.h
pljit/pljit_core/source_code_management/: CMakeLists.txt  CompilationError.cpp  CompilationError.hpp  SourceCode.cpp  SourceCode.hpp  SourceCodeReference.cpp  SourceCodeReference.hpp
pljit/pljit_core/tokens/: CMakeLists.txt  LexerAssignmentToken.hpp  LexerDeclaratorToken.hpp  LexerErrorToken.hpp  LexerIdentifierToken.hpp  LexerKeywordToken.hpp  LexerLiteralToken.hpp  LexerSeparatorToken.hpp  LexerTerminatorToken.hpp  LexerToken.hpp  Token.hpp
test/: AbstractSyntaxTree.cpp  CMakeLists.txt  Lexer.cpp  PLjit.cpp  ParseTree.cpp  Tester.cpp
test/invalid_source/: id:000003,src:000001,time:3,execs:37,op:havoc,rep:16  id:000004,src:000001,time:4,execs:47,op:havoc,rep:16  id:000005,src:000001,time:5,execs:56,op:havoc,rep:4  id:000006,src:000001,time:7,execs:66,op:havoc,rep:4  id:000007,src:000001,time:8,execs:77,op:havoc,rep:4  id:000008,src:000001,time:10,execs:93,op:havoc,rep:8,+cov  id:000009,src:000001,time:12,execs:110,op:havoc,rep:16  id:000010,src:000001,time:14,execs:121,op:havoc,rep:16  id:000011,src:000001,time:15,execs:131,op:havoc,rep:8  id:000012,src:000001,time:17,execs:145,op:havoc,rep:2  id:000014,src:000001,time:22,execs:183,op:havoc,rep:4  id:000016,src:000001,time:44,execs:356,op:havoc,rep:16  id:000017,src:000001,time:77,execs:623,op:havoc,rep:16  id:000018,src:000001,time:177,execs:1430,op:havoc,rep:16  id:000019,src:000001,time:245,execs:1978,op:havoc,rep:16  id:000020,src:000001,time:1388,execs:11184,op:havoc,rep:16  id:000021,src:000003+000019,time:9274,execs:74951,op:splice,rep:32  id:000022,src:000017+000021,time:9726,execs:78589,op:splice,rep:4  id:000023,src:000003+000021,time:9803,execs:79211,op:splice,rep:8  id:000024,src:000003+000021,time:9806,execs:79231,op:splice,rep:32  id:000025,src:000003+000021,time:9812,execs:79277,op:splice,rep:2  id:000026,src:000013,time:600191,execs:4769252,op:havoc,rep:16  id:000027,src:000013,time:600197,execs:4769295,op:havoc,rep:64  id:000028,src:000013,time:600211,execs:4769402,op:havoc,rep:32  id:000029,src:000013,time:600224,execs:4769492,op:havoc,rep:8  id:000030,src:000013,time:600265,execs:4769801,op:havoc,rep:16  id:000031,src:000017+000030,time:607079,execs:4820679,op:splice,rep:64  id:000032,src:000017+000031,time:607499,execs:4823618,op:splice,rep:16  id:000033,src:000017+000032,time:725648,execs:5616461,op:splice,rep:64  id:000034,src:000017+000033,time:727245,execs:5625843,op:splice,rep:64  out_of_range_int.txt
test/valid_source/: brackets.txt  example_program.txt  factorial.txt  leet.txt  valid_source_3.txt
(+8 files in other folders)
