add_library(ast Ast.cpp Ast.hpp SymbolTable.cpp SymbolTable.hpp ast_nodes/Statement.cpp ast_nodes/Statement.hpp ast_nodes/Expression.cpp ast_nodes/Expression.hpp ast_nodes/ReturnStatement.cpp ast_nodes/ReturnStatement.hpp ast_nodes/AssignmentStatement.cpp ast_nodes/AssignmentStatement.hpp ast_nodes/VariableExpression.cpp ast_nodes/VariableExpression.hpp ast_nodes/ArithmeticExpression.cpp ast_nodes/ArithmeticExpression.hpp ast_nodes/Function.cpp ast_nodes/Function.hpp)
target_link_libraries(ast parse_tree)