add_library(parse_tree ParseTree.hpp parse_tree_nodes/FunctionDefinition.cpp parse_tree_nodes/FunctionDefinition.hpp parse_tree_nodes/ConstantDeclaration.cpp parse_tree_nodes/ConstantDeclaration.hpp parse_tree_nodes/CompoundStatement.cpp parse_tree_nodes/CompoundStatement.hpp parse_tree_nodes/TerminalSymbol.hpp parse_tree_nodes/DeclaratorList.hpp parse_tree_nodes/Identifier.hpp parse_tree_nodes/DeclaratorList.cpp parse_tree_nodes/InitDeclaratorList.cpp parse_tree_nodes/InitDeclaratorList.hpp parse_tree_nodes/Literal.hpp parse_tree_nodes/ParameterDeclaration.hpp parse_tree_nodes/VariableDeclaration.hpp)
