set(PARSE_TREE_SOURCES
        ParseTree.hpp
        ParseTree.cpp
        ParseTreeVisitor.hpp
        ParseTreePrintVisitor.cpp
        ParseTreePrintVisitor.hpp
        parse_tree_nodes/FunctionDefinition.cpp
        parse_tree_nodes/FunctionDefinition.hpp
        parse_tree_nodes/ConstantDeclaration.hpp
        parse_tree_nodes/CompoundStatement.cpp
        parse_tree_nodes/CompoundStatement.hpp
        parse_tree_nodes/TerminalSymbol.hpp
        parse_tree_nodes/DeclaratorList.hpp
        parse_tree_nodes/Identifier.hpp
        parse_tree_nodes/DeclaratorList.cpp
        parse_tree_nodes/InitDeclaratorList.cpp
        parse_tree_nodes/InitDeclaratorList.hpp
        parse_tree_nodes/Literal.hpp
        parse_tree_nodes/ParameterDeclaration.hpp
        parse_tree_nodes/VariableDeclaration.hpp
        parse_tree_nodes/InitDeclarator.cpp
        parse_tree_nodes/InitDeclarator.hpp
        parse_tree_nodes/Identifier.cpp
        parse_tree_nodes/Factory.cpp
        parse_tree_nodes/Factory.hpp
        parse_tree_nodes/Literal.cpp
        parse_tree_nodes/StatementList.cpp
        parse_tree_nodes/StatementList.hpp
        parse_tree_nodes/Statement.cpp
        parse_tree_nodes/Statement.hpp
        parse_tree_nodes/AssignmentExpression.cpp
        parse_tree_nodes/AssignmentExpression.hpp
        parse_tree_nodes/AdditiveExpression.cpp
        parse_tree_nodes/AdditiveExpression.hpp
        parse_tree_nodes/MultiplicativeExpression.cpp
        parse_tree_nodes/MultiplicativeExpression.hpp
        parse_tree_nodes/PrimaryExpression.cpp
        parse_tree_nodes/PrimaryExpression.hpp
        parse_tree_nodes/UnaryExpression.cpp
        parse_tree_nodes/UnaryExpression.hpp
        parse_tree_nodes/ArithmeticSymbol.hpp
        parse_tree_nodes/TerminalSymbol.cpp
        parse_tree_nodes/ConstantDeclaration.cpp
        parse_tree_nodes/ParameterDeclaration.cpp
        parse_tree_nodes/VariableDeclaration.cpp
        )

add_library(parse_tree ${PARSE_TREE_SOURCES})
target_link_libraries(parse_tree lexer)